--- a/AppledocSettings.plist
+++ b/AppledocSettings.plist
@@ -5,9 +5,9 @@
 	<key>--project-name</key>
 	<string>YCML</string>
 	<key>--project-version</key>
-	<string>0.1.9</string>
+	<string>0.2.0</string>
 	<key>--project-company</key>
-	<string>Ioannis Chatzikonstantinou / yconst.com</string>
+	<string>Ioannis (Yannis) Chatzikonstantinou / yconst.com</string>
 	<key>--create-html</key>
 	<true/>
 	<key>--create-docset</key>
