Committing YCMatrix updates

--- a/YCMatrix/YCMatrix-Info.plist
+++ b/YCMatrix/YCMatrix-Info.plist
@@ -3,25 +3,27 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
+	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yconst.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>yconst.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.6.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013 - 2015 Yannis Chatzikonstantinou. All rights reserved.</string>
+	<string>Copyright © 2013 - 2015 Ioannis Chatzikonstantinou. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
